--- a/views/layouts/upl.hbs
+++ b/views/layouts/upl.hbs
@@ -41,7 +41,7 @@
             <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
                 <div class="logo">
                     <!-- <h1>PH<span><img src="/images/logo.png" alt=""></span>TO<span class="photo-g">G</span></h1> -->
-                    <a href="#hero-section">
+                    <a href="/">
                         <img src="/images/Screenshot 2023-03-01 021642.png" alt="" />
                     </a>
                 </div>
@@ -119,7 +119,7 @@
                     </li>
                     <li class="nav-item nav-profile dropdown">
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-                            <img src="images/faces/face28.jpg" alt="profile" />
+                            <img src="/images/faces/face28.jpg" alt="profile" />
                         </a>
                         <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
                             <a class="dropdown-item">
