--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -123,7 +123,7 @@
                                 <i class="ti-settings text-primary"></i>
                                 Settings
                             </a>
-                            <a class="dropdown-item" href="/index.html">
+                            <a class="dropdown-item" href="/">
                                 <i class="ti-power-off text-primary"></i>
                                 Logout
                             </a>
@@ -172,13 +172,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/order/order.html">
+                        <a class="nav-link" href="/admin/orders">
                             <i class="icon-shopping-cart menu-icon"></i>
                             <span class="menu-title">Orders</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/packages/package.html">
+                        <a class="nav-link" href="/admin/packages">
                             <i class="icon-shopping-bag menu-icon"></i>
                             <span class="menu-title">Packages</span>
                         </a>
