--- a/views/layouts/parent.hbs
+++ b/views/layouts/parent.hbs
@@ -40,7 +40,7 @@
             <div class="containers container">
                 <div class="logo">
                     <!-- <h1>PH<span><img src="/images/logo.png" alt=""></span>TO<span class="photo-g">G</span></h1> -->
-                    <a href="/index.html">
+                    <a href="/">
                         <img src="/images/Screenshot 2023-03-01 021642.png" alt="" />
                     </a>
                 </div>
@@ -50,10 +50,10 @@
                         <label for="show-burger">
                             <i class="icon-close style-close" id="closebtn"></i>
                         </label>
-                        <li><a href="/service.html" class="active">Services</a></li>
-                        <li><a href="/about.html">About Us</a></li>
-                        <li><a href="/contact.html">Contact Us</a></li>
-                        <li><a href="/faqs.html">FAQs</a></li>
+                        <li><a href="/service" class="active">Services</a></li>
+                        <li><a href="/about">About Us</a></li>
+                        <li><a href="/contact">Contact Us</a></li>
+                        <li><a href="/faqs">FAQs</a></li>
                     </ul>
                 </nav>
                 <!-- <div class="account">
@@ -64,7 +64,7 @@
                     </a>
                 </div> -->
                 <!-- <div class="login">
-                    <a href="/login.html">
+                    <a href="/login">
                         <button>Login</button>
                     </a>
                 </div> -->
@@ -78,7 +78,7 @@
                             <i class="ti-settings text-primary"></i>
                             Settings
                         </a>
-                        <a class="dropdown-item" href="/index (3).html">
+                        <a class="dropdown-item" href="/index (3)">
                             <i class="ti-settings text-primary"></i>
                             Dashboard
                         </a>
@@ -103,9 +103,9 @@
         </header>
 
         <div class="container-fluid page-body-wrapper">
-            <!-- partial:partials/_settings-panel.html -->
+            <!-- partial:partials/_settings-panel -->
             <!-- partial -->
-            <!-- partial:partials/_sidebar.html -->
+            <!-- partial:partials/_sidebar -->
             <nav class="sidebar sidebar-offcanvas" id="sidebar">
                 <ul class="nav">
                     <li class="nav-item">
@@ -115,7 +115,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/service.html">
+                        <a class="nav-link" href="/service">
                             <i class="icon-bell-o menu-icon"></i>
                             <span class="menu-title">Notifications</span>
                             <!-- <i class="menu-arrow"></i> -->
@@ -123,28 +123,28 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/service.html">
+                        <a class="nav-link" href="/service">
                             <i class="icon-heart-o menu-icon"></i>
                             <span class="menu-title">Likes</span>
                             <!-- <i class="menu-arrow"></i> -->
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/service.html">
+                        <a class="nav-link" href="/service">
                             <i class="icon-arrow_downward menu-icon"></i>
                             <span class="menu-title">Download</span>
                             <!-- <i class="menu-arrow"></i> -->
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/service.html">
+                        <a class="nav-link" href="/service">
                             <i class="icon-settings menu-icon"></i>
                             <span class="menu-title">Settings</span>
                             <!-- <i class="menu-arrow"></i> -->
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/service.html">
+                        <a class="nav-link" href="/service">
                             <i class="icon-question_answer menu-icon"></i>
                             <span class="menu-title">FAQs</span>
                         </a>
@@ -185,7 +185,7 @@
                                             </h1>
                                         </div>
                                         <div class="col-md-4 unique-btn pb-lg-5" id="unique-btn">
-                                            <a href="/checkout.html">
+                                            <a href="/checkout">
                                                 <button type="button">
                                                     Download photos <i class="icon-arrow-right"></i> <span
                                                         id="count">0</span>
@@ -438,7 +438,7 @@
                                             </h1>
                                         </div>
                                         <div class="col-md-4 unique-btn pb-lg-5" id="unique-btn">
-                                            <a href="/summary.html">
+                                            <a href="/summary">
                                                 <button>
                                                     Download photos <i class="icon-arrow-right"></i> <span
                                                         id="count-1">0</span>
@@ -591,7 +591,7 @@
                                             </h1>
                                         </div>
                                         <div class="col-md-4 unique-btn pb-lg-5" id="unique-btn">
-                                            <a href="/summary.html">
+                                            <a href="/summary">
                                                 <button>
                                                     Download photos <i class="icon-arrow-right"></i> <span>0</span>
                                                 </button>
@@ -839,7 +839,7 @@
                                             </h1>
                                         </div>
                                         <div class="col-md-4 unique-btn pb-lg-5" id="unique-btn">
-                                            <a href="/summary.html">
+                                            <a href="/summary">
                                                 <button>
                                                     Download photos <i class="icon-arrow-right"></i> <span>0</span>
                                                 </button>
@@ -1077,35 +1077,35 @@
 
                 </div>
                 <!-- content-wrapper ends -->
-                <!-- partial:partials/_footer.html -->
+                <!-- partial:partials/_footer -->
                 <footer class="footer">
                     <div class="">
                         <div class="row footer-container">
                             <div class="col-lg-2 col-md-3">
                                 <h5>About Us</h5>
-                                <p><a href="/index.html">Our Team</a></p>
-                                <p><a href="/services.html">Career</a></p>
+                                <p><a href="/">Our Team</a></p>
+                                <p><a href="/services">Career</a></p>
                                 <p><a href="#blog-section">Our Goods</a></p>
                                 <p><a href="#blog-section">Popular Searches</a></p>
                                 <p><a href="#blog-section">PhotoG Blog</a></p>
                             </div>
                             <div class="col-lg-2 col-md-3">
                                 <h5>Services</h5>
-                                <p><a href="/index.html">Premium Quality</a></p>
-                                <p><a href="/services.html">Packages</a></p>
+                                <p><a href="/">Premium Quality</a></p>
+                                <p><a href="/services">Packages</a></p>
                                 <p><a href="#blog-section">Coupons</a></p>
                                 <p><a href="#blog-section">Unique Codes</a></p>
                             </div>
                             <div class="col-lg-5 col-md-3">
                                 <h5>Contact Us</h5>
                                 <p>
-                                    <a href="/index.html"><i class="icon-envelope-o"></i> contact@photog.com</a>
+                                    <a href="/"><i class="icon-envelope-o"></i> contact@photog.com</a>
                                 </p>
                                 <p>
-                                    <a href="/index.html"><i class="icon-phone"></i> +872 5648473</a>
+                                    <a href="/"><i class="icon-phone"></i> +872 5648473</a>
                                 </p>
                                 <p>
-                                    <a href="/index.html">Chat with us <i class="icon-arrow-right"></i></a>
+                                    <a href="/">Chat with us <i class="icon-arrow-right"></i></a>
                                 </p>
                             </div>
                             <div class="col-lg-3 col-md-3 dark-logo">
